--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 <title>Lei Yang</title>
 <!-- for-mobile-apps -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="Welcome to my homepage!" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Your Name, your field" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
@@ -118,7 +118,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="footer-grids">
 				<div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay="0s">
                     <h3>Contact</h3>
-                    <p>Email: yourname &alpha; caltech.edu</p>
+                    <p>Email: leiyang &alpha; sjtu.edu.cn</p>
                     <p>Phone: XXX-XXX-XXXX</p>
                     <p>Office: XXXXXX</p>
 					<div class="social">
@@ -131,10 +131,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
                 <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
-                    <br><br><br>
-                    <p>Mail: MC XXX-XX</p>
-                    <p>1200 E. California Blvd.</p>
-                    <p>Pasadena, CA 91125</p>
+                    <br><br>
+                    <p>800 Dongchuan Rd.</p>
+                    <p>Shanghai, China 800812</p>
                 </div>
                 <div class="clearfix"> </div>
 			</div>
