--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 <title>Lei Yang</title>
 <!-- for-mobile-apps -->
-<meta name="Welcome to my homepage!" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Your Name, your field" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
@@ -58,7 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="logo">
-						<h1><a class="navbar-brand" href="index.html">Lei Yang</a></h1>
+						<h1><a class="navbar" href="index.html">Lei Yang</a></h1>
 					</div>
 				</div>
 
@@ -131,7 +131,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
                 <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
-                    <br><br>
+                    <br><br><br>
                     <p>800 Dongchuan Rd.</p>
                     <p>Shanghai, China 800812</p>
                 </div>
