--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="logo">
-						<h1><a class="navbar" href="index.html">Lei Yang</a></h1>
+						<h1><a class="navbar" href="index.html">Hello 你好！</a></h1>
 					</div>
 				</div>
 
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- banner -->
 	<div class="banner1">
 		<div class="container">
-			<h2 class="animated wow slideInLeft"><a href="index.html">Home</a></h2>
+			<h2 class="animated wow slideInLeft"><a href="index.html">Welcome to Lei Yang's Homepage!</a></h2>
 		</div>
 	</div>
 <!-- //banner -->
@@ -121,14 +121,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <p>Email: leiyang &alpha; sjtu.edu.cn</p>
                     <p>Phone: XXX-XXX-XXXX</p>
                     <p>Office: XXXXXX</p>
-					<div class="social">
-						<ul class="social-nav model-8">
-							<li><a href="#" class="facebook"><i></i></a></li>
-							<li><a href="#" class="twitter"><i> </i></a></li>
-							<li><a href="#" class="g"><i></i></a></li>
-							<li><a href="#" class="p"><i></i></a></li>
-						</ul>
-					</div>
 				</div>
                 <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
                     <br><br><br>
