--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello 你好！</title>
+<title>Hello!</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -58,7 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 				  </button>
 					<div class="logo">
-						<h1><a class="navbar" href="index.html"> Hello 你好！</a></h1>
+						<h1><a class="navbar" href="index.html"> Hello！</a></h1>
 					</div>
 				</div>
 
