--- a/index.html
+++ b/index.html
@@ -92,10 +92,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="panel panel-default">
                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body panel_text">
-                                I am a graduate student at Caltech and I work on temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe
-                                eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias
-                                consequatur aut perferendis doloribus asperiores repellat.
+                                Hi I'm Lei Yang 杨蕾! I am a final-year Ph.D. student at Department of Astronomy of Shanghai Jiao Tong 
+				    University. Currently, I am woking on improving the measurement accuracy of the galaxy two-point 
+				    correlation function by proposing novel method to correct the fiber-collision effects and by 
+				    using robust random-sample generator to construct better random catalogs in galaxy clustering estimation. 
+				    My supervisor is <a href="http://astro.sjtu.edu.cn/zh/staff/people/11-">Prof. Yipeng Jing</a> 
+				    and <a href="http://astro.sjtu.edu.cn/zh/staff/people/15-">Prof. Xiaohu Yang</a>.
+				    
+				    My primary research insteset lies in observational cosmology, particular in galaxy-halo connection, 
+				    galaxy formation and evolution, and large-scale structure of the universe. 
+				    
                             </div>
                         </div>
                     </div>
@@ -115,9 +121,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="footer-grids">
 				<div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay="0s">
                     <h3>Contact</h3>
-                    <p>Email: yourname &alpha; caltech.edu</p>
+                    <p>Email: leiyang &alpha; sjtu.edu.cn</p>
                     <p>Phone: XXX-XXX-XXXX</p>
-                    <p>Office: XXXXXX</p>
+                    <p>Office: 509</p>
 				</div>
                 <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
                     <br><br><br>
