--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- banner -->
 	<div class="banner1">
 		<div class="container">
-			<h2 class="animated wow slideInLeft"><a href="index.html">Welcome to My Homepage!</a></h2>
+			<h2 class="animated wow slideInLeft"><a href="index.html">Welcome to My Homepage 欢迎来到我的主页!</a></h2>
 		</div>
 	</div>
 <!-- //banner -->
@@ -121,15 +121,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="footer-grids">
 				<div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay="0s">
                     <h3>Contact</h3>
-                    <p>Email: leiyang &alpha; sjtu.edu.cn</p>
+                    <p>Email: leiyang (&alpha;) sjtu.edu.cn</p>
                     <p>Phone: XXX-XXX-XXXX</p>
                     <p>Office: 509</p>
 				</div>
                 <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
                     <br><br><br>
-                    <p>Mail: MC XXX-XX</p>
-                    <p>1200 E. California Blvd.</p>
-                    <p>Pasadena, CA 91125</p>
+                    <p>Mail: 509 5th floor, New Science Building</p>
+                    <p>800 Dongchuan Rd. Minghang Qu</p>
+                    <p>Shanghai, China 200240</p>
                 </div>
                 <div class="clearfix"> </div>
 			</div>
