--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
             </div>
             <div class="col-md-6 about-grids-right animated wow slideInRight" data-wow-delay="0s">
-                <img src="images/600x435.gif" alt=" " class="img-responsive" />
+                <img src="images/me.jpg" alt=" " class="img-responsive" />
             </div>
             <div class="clearfix"> </div>
         </div>
