--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    correlation function by proposing novel method to correct the fiber-collision effects and by 
 				    using robust random-sample generator to construct better random catalogs in galaxy clustering estimation. 
 				    My supervisor is <a href="http://astro.sjtu.edu.cn/zh/staff/people/11-">Prof. Yipeng Jing</a> 
-				    and <a href="http://astro.sjtu.edu.cn/zh/staff/people/15-">Prof. Xiaohu Yang</a>.
+				    and <a href="http://astro.sjtu.edu.cn/zh/staff/people/15-">Prof. Xiaohu Yang</a>.<br>
 				    
 				    My primary research insteset lies in observational cosmology, particular in galaxy-halo connection, 
 				    galaxy formation and evolution, and large-scale structure of the universe. 
