--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
                 <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
                     <br><br><br>
-                    <p>Mail: 509 5th floor, New Science Building</p>
+                    <p>Mail: Room509, 5th floor, New Science Building</p>
                     <p>800 Dongchuan Rd. Minghang Qu</p>
                     <p>Shanghai, China 200240</p>
                 </div>
