--- a/research.html
+++ b/research.html
@@ -57,9 +57,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
-					<div class="logo">
-						<h1><a class="navbar-brand" href="index.html">Your Name</a></h1>
-					</div>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -211,23 +208,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="footer-grids">
 				<div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
                     <h3>Contact</h3>
-                    <p>Email: yourname &alpha; caltech.edu</p>
+                    <p>Email: leiyang (&alpha;) sjtu.edu.cn</p>
                     <p>Phone: XXX-XXX-XXXX</p>
-                    <p>Office: XXXXXX</p>
-					<div class="social">
-						<ul class="social-nav model-8">
-							<li><a href="#" class="facebook"><i></i></a></li>
-							<li><a href="#" class="twitter"><i> </i></a></li>
-							<li><a href="#" class="g"><i></i></a></li>
-							<li><a href="#" class="p"><i></i></a></li>
-						</ul>
-					</div>
+                    <p>Office: 509</p>
 				</div>
-                <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".03s">
+                <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
                     <br><br><br>
-                    <p>Mail: MC XXX-XX</p>
-                    <p>1200 E. California Blvd.</p>
-                    <p>Pasadena, CA 91125</p>
+                    <p>Mail: Room509, 5th floor, New Science Building</p>
+                    <p>800 Dongchuan Rd. Minghang Qu</p>
+                    <p>Shanghai, China 200240</p>
                 </div>
                 <div class="clearfix"> </div>
 			</div>
