--- a/research.html
+++ b/research.html
@@ -87,7 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="about">
 		<div class="container">
             <h3 class="animated wow zoomIn" data-wow-delay="0s">Research #1</h3>
-			<p class="qui animated wow zoomIn" data-wow-delay="0s">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil.</p>
+			<p class="qui animated wow zoomIn" data-wow-delay="0s">Using the MNN method to orrect the fiber-collision effects on galaxy clustering measurements</p>
 			<div class="about-grids">
 				<div class="col-md-6 about-grids-left">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
