--- a/research.html
+++ b/research.html
@@ -94,16 +94,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="panel-heading panel-heading-sub" role="tab" id="headingOne">
 							  <h4 class="panel-title asd">
 								<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span><i class="glyphicon glyphicon-menu-up" aria-hidden="true"></i>Subtopic #1
+                                    <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span><i class="glyphicon glyphicon-menu-up" aria-hidden="true"></i>Modified Nearest Neighbour (MNN) method 
 								</a>
 							  </h4>
 							</div>
 							<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 							  <div class="panel-body panel_text">
-									Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe 
-									eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum 
-									rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias 
-									consequatur aut perferendis doloribus asperiores repellat.
+									we proposed a novel method to correct the fiber-collision effects on galaxy clustering 
+									measurements. Without detailed tailing information of survey or massive calculations,
+									our MNN method properly recover the redshift distribution of the fiber-collided galaxies.
+									A 1% measurement accuracy of the projected two-point correlation function is acchieved.
+								  Please read our <a href="https://iopscience.iop.org/article/10.3847/1538-4357/aafc22/meta">paper</a> for detials.
 							  </div>
 							</div>
 						</div>
