--- a/research.html
+++ b/research.html
@@ -100,10 +100,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 							  <div class="panel-body panel_text">
-									we proposed a novel method to correct the fiber-collision effects on galaxy clustering 
+									We proposed a novel method to correct the fiber-collision effects on galaxy clustering 
 									measurements. Without detailed tailing information of survey or massive calculations,
 									our MNN method properly recover the redshift distribution of the fiber-collided galaxies.
-									A 1% measurement accuracy of the projected two-point correlation function is acchieved.
+									A 1% accuracy of the projected two-point correlation function is achieved comparing with the true one.
 								  Please read our <a href="https://iopscience.iop.org/article/10.3847/1538-4357/aafc22/meta">paper</a> for detials.
 							  </div>
 							</div>
