--- a/research.html
+++ b/research.html
@@ -112,7 +112,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="panel-heading panel-heading-sub" role="tab" id="headingTwo">
 							  <h4 class="panel-title asd">
 								<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span><i class="glyphicon glyphicon-menu-up" aria-hidden="true"></i>Subtopic #2
+                                    <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span><i class="glyphicon glyphicon-menu-up" aria-hidden="true"></i>Constructing the random samples with Vmax method
 								</a>
 							  </h4>
 							</div>
