--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="panel panel-default">
                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body panel_text">
-                                Hi I'm Lei Yang 杨蕾! I am a final-year Ph.D. student at Department of Astronomy of Shanghai Jiao Tong University. Currently, I am woking on improving the measurement accuracy of the galaxy two-point correlation function by proposing novel method to correct the fiber-collision effects and by using robust random-sample generator to construct better random catalogs in galaxy clustering estimation. My supervisor is <a href="http://astro.sjtu.edu.cn/zh/staff/people/11-">Prof. Yipeng Jing</a> and <a href="http://astro.sjtu.edu.cn/zh/staff/people/15-">Prof. Xiaohu Yang</a>.<br>
-				    
-				My primary research insteset lies in observational cosmology, particular in galaxy-halo connection, galaxy formation and evolution, and large-scale structure of the universe. 
-				    
+                                Hi I'm Lei Yang 杨蕾! I am a final-year Ph.D. student in Department of Astronomy 
+				at Shanghai Jiao Tong University. I work with <a href="http://astro.sjtu.edu.cn/zh/staff/people/11-">Prof. Yipeng Jing</a> and <a href="http://astro.sjtu.edu.cn/zh/staff/people/15-">Prof. Xiaohu Yang</a> 
+				on improving measurement accuracy of galaxy clustering. <br>
+				My primary research interest lies in observational cosmology, particular in galaxy-halo connection, galaxy formation and evolution, and large-scale structure of the universe.	    
                             </div>
                         </div>
                     </div>
