--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay="0s">
                     <h3>Contact</h3>
                     <p>Email: leiyang (&alpha;) sjtu.edu.cn</p>
-                    <p>Phone: XXX-XXX-XXXX</p>
+                    <p>Phone: +86-21-6728-5219</p>
                     <p>Office: 509</p>
 				</div>
                 <div class="col-md-4 footer-grid animated wow slideInLeft" data-wow-delay=".01s">
