--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="panel panel-default">
                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body panel_text">
-                                Hi I'm Lei Yang 杨蕾, a final year Ph.D. student in the Department of Astronomy 
+                                <h1>i I'm Lei Yang 杨蕾, a final year Ph.D. student in the Department of Astronomy 
 				at Shanghai Jiao Tong University. I work with <a href="http://astro.sjtu.edu.cn/zh/staff/people/11-">Prof. Yipeng Jing</a> and <a href="http://astro.sjtu.edu.cn/zh/staff/people/15-">Prof. Xiaohu Yang</a> 
 				on improving the measurement accuracy of galaxy two-point correlation functions on different scales. <br>
 				       
 				I graduated from Peking University in 2012 with Master degreen in Astrophysics. Before that, I obtained my Bachelor degree
 				at Hebei University majoring in Optical Information and Technology . <br>
 				       
-				My primary research interest lies in observational cosmology, particular in galaxy-halo connection, galaxy formation and evolution, and large-scale structure of the universe.
+				My primary research interest lies in observational cosmology, particular in galaxy-halo connection, galaxy formation and evolution, and large-scale structure of the universe.(18px)</h1>
                             </div>
                         </div>
                     </div>
