--- a/research.html
+++ b/research.html
@@ -57,6 +57,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
+					<div class="logo">
+						<h1><a class="navbar-brand" href="index.html">Lei Yang 杨蕾</a></h1>
+					</div>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- banner -->
 	<div class="banner1">
 		<div class="container">
-			<h2 class="animated wow slideInLeft" data-wow-delay="0s"><a href="index.html">Home</a> / <span>Research</span></h2>
+			<h2 class="animated wow slideInLeft" data-wow-delay="0s"><span>Research</span></h2>
 		</div>
 	</div>
 <!-- //banner -->
