--- a/research.html
+++ b/research.html
@@ -115,7 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="panel-heading panel-heading-sub" role="tab" id="headingTwo">
 							  <h4 class="panel-title asd">
 								<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span><i class="glyphicon glyphicon-menu-up" aria-hidden="true"></i>Constructing the random samples with Vmax method
+                                    <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span><i class="glyphicon glyphicon-menu-up" aria-hidden="true"></i>Constructing random samples using the Vmax method
 								</a>
 							  </h4>
 							</div>
@@ -142,7 +142,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 				<div class="col-md-6 about-grids-right animated wow slideInRight" data-wow-delay="0s">
-					<img src="images/3.jpg" alt=" " class="img-responsive" />
+					<img src="images/MNNfig.jpg" alt=" " class="img-responsive" />
 				</div>
 				<div class="clearfix"> </div>
 			</div>
