--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
             <h3 class="animated wow zoomIn" data-wow-delay="0s">Property-dependent galaxy clustering</h3>
 			<div class="about-grids">
-				<div class="col-md-6 about-grids-left">
+				<div>
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
 							<div class="panel-heading panel-heading-sub" role="tab" id="headingOne">
@@ -109,6 +109,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									A 1% accuracy of the projected two-point correlation function is achieved comparing with the true one.
 								  Please read our <a href="https://iopscience.iop.org/article/10.3847/1538-4357/aafc22/meta">paper</a> for detials.
 							  </div>
+			    				  <div class="col-md-6 about-grids-right animated wow slideInRight" data-wow-delay="0s">
+								<img src="images/MNNfig.jpg" alt=" " class="img-responsive" />
+							  </div>
+							  <div class="col-md-6 about-grids-right animated wow slideInRight" data-wow-delay="0s">
+								<img src="images/MNNfig.jpg" alt=" " class="img-responsive" />
+							  </div>
+							  <div class="clearfix"> </div>
 							</div>
 						</div>
 						<div class="panel panel-default">
@@ -141,10 +148,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 about-grids-right animated wow slideInRight" data-wow-delay="0s">
-					<img src="images/MNNfig.jpg" alt=" " class="img-responsive" />
-				</div>
-				<div class="clearfix"> </div>
 			</div>
 		</div>
 	</div>
