--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
             <h3 class="animated wow zoomIn" data-wow-delay="0s">Property-dependent galaxy clustering</h3>
 			<div class="about-grids">
-				<div>
+				<div class="col-md-20">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 						<div class="panel panel-default">
 							<div class="panel-heading panel-heading-sub" role="tab" id="headingOne">
