--- a/research.html
+++ b/research.html
@@ -107,13 +107,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									measurements. Without detailed tailing information of survey or massive calculations,
 									our MNN method properly recover the redshift distribution of the fiber-collided galaxies.
 									A 1% accuracy of the projected two-point correlation function is achieved comparing with the true one.
-								  Please read our <a href="https://iopscience.iop.org/article/10.3847/1538-4357/aafc22/meta">paper</a> for detials.
-							  </div>
-			    				  <div class="col-md-6 about-grids-right animated wow slideInRight" data-wow-delay="0s">
+								  Please read our <a href="https://iopscience.iop.org/article/10.3847/1538-4357/aafc22/meta">paper</a> for detials.</br>
+							  <div class="col-md-6 about-grids-right animated wow slideInRight" data-wow-delay="0s">
 								<img src="images/MNNfig.jpg" alt=" " class="img-responsive" />
 							  </div>
 							  <div class="col-md-6 about-grids-right animated wow slideInRight" data-wow-delay="0s">
 								<img src="images/MNNfig.jpg" alt=" " class="img-responsive" />
+							  </div>
 							  </div>
 							</div>
 						</div>
